syntax = "proto3";

option csharp_namespace = "ED.DomainServices";

package enums;

enum MalwareScanResultStatus {
  IN_PROGRESS = 0;
  COMPLETE = 1;
  ERROR = 2;
}

enum ForwardStatus {
  NONE = 0;
  IS_ORIGINAL_FORWARDED = 1;
  IS_IN_FORWARD_CHAIN = 2;
  IS_IN_FORWARD_CHAIN_AND_FORWARDED = 3;
}

enum ProfileType {
  PROFILE_TYPE_NONE = 0;
  PROFILE_TYPE_INDIVIDUAL = 1;
  PROFILE_TYPE_LEGAL_ENTITY = 2;
}

enum ProfileHistoryAction {
  CREATE_PROFILE = 0;
  ACCESS_PROFILE = 1;
  PROFILE_ACTIVATED = 2;
  PROFILE_DEACTIVATED = 3;
  GRANT_ACCESS_TO_PROFILE = 4;
  REMOVE_ACCESS_TO_PROFILE = 5;
  PROFILE_UPDATED = 6;
}

enum TargetGroup {
  TARGET_GROUP_NONE = 0;
  INDIVIDUAL = 1;
  LEGAL_ENTITY = 2;
  PUBLIC_ADMINISTRATION = 3;
  SOCIAL_ORGANIZATION = 4;
}

enum LoginProfilePermissionType {
  LOGIN_PROFILE_PERMISSION_TYPE_NONE = 0;
  OWNER_ACCESS = 1;
  FULL_MESSAGE_ACCESS = 2;
  READ_PROFILE_MESSAGE_ACCESS = 3;
  WRITE_PROFILE_MESSAGE_ACCESS = 4;
  LIST_PROFILE_MESSAGE_ACCESS = 5;
  ADMINISTER_PROFILE_ACCESS = 6;
}

enum RegistrationRequestStatus {
  REGISTRATION_REQUEST_STATUS_NONE = 0;
  NEW = 1;
  CONFIRMED = 2;
  REJECTED = 3;
  DELETED = 4;
}

enum NotificationType {
  NOTIFICATION_TYPE_NONE = 0;
  NOTIFICATION_TYPE_EMAIL = 1;
  NOTIFICATION_TYPE_SMS = 2;
  NOTIFICATION_TYPE_PUSH_NOTIFICATION = 3;
  NOTIFICATION_TYPE_VIBER = 4;
}

enum TemplateSecurityLevel {
  TEMPLATE_SECURITY_LEVEL_NONE = 0;
  TEMPLATE_SECURITY_LEVEL_LOW = 1;
  TEMPLATE_SECURITY_LEVEL_MEDIUM = 2;
  TEMPLATE_SECURITY_LEVEL_HIGH = 3;
}
